--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>ZT-CHARPENTE</title>
         <link rel="stylesheet" href="style/style.css">
     </head>
@@ -10,15 +11,30 @@
     <body>
 
         <header>
+            <img id="logo" src="img/mobile-header-logo.svg" alt="logo zt-charpente">
         </header>
 
         <nav>
+            <a href="html/about.html">à propos</a>
+            <a href="html/works.html">travaux</a>
+            <a href="html/contact.html">contact</a>
         </nav>
 
         <section>
+            <img class="img-index" src="img/zt-haches.jpg">
+        </section>
+        <section id="txt-index">
+            <p>Bienvenue sur le site internet de ZT-Charpente.<br>
+            <a href="html/contact.html">Contactez-nous</a> pour tous vos projets de construction bois. bla bla bla bla bla.<br> Visitez nos <a href="html/works.html">réalisations</a> ou apprenez en plus sur notre <a href="html/about.html">philosophie</a> de construction.</p>
         </section>
 
         <footer>
+            <div id="footer-links">
+                <a href="html/about.html">à propos</a> | 
+                <a href="html/works.html">travaux</a> | 
+                <a href="html/contact.html">contact</a>
+            </div>
+            <p class="copyright">&copy 2020 ZT-Charpente</p>
         </footer>
 
     </body>
