update html layout and styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>ZT-CHARPENTE</title>
+        <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="style/style.css">
     </head>
 
@@ -21,10 +22,11 @@
         </nav>
 
         <section>
-            <img class="img-index" src="img/zt-haches.jpg">
+            <img id="img-index" src="img/zt-haches.jpg">
         </section>
         <section id="txt-index">
-            <p>Bienvenue sur le site internet de ZT-Charpente.<br>
+            <h1>CONSTRUCTIONS BOIS ÉCOLOGIQUES</h1>
+            <p>ZT-Charpente réalise pour vous la consrtuction de charpente bois traditionnelles, de terrasses, extensions, cabanes, etc...<br>
             <a href="html/contact.html">Contactez-nous</a> pour tous vos projets de construction bois. bla bla bla bla bla.<br> Visitez nos <a href="html/works.html">réalisations</a> ou apprenez en plus sur notre <a href="html/about.html">philosophie</a> de construction.</p>
         </section>
 
