add cleaner CSS structure and layout

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </nav>
 
         <section>
-            <img id="img-index" src="img/zt-haches.jpg">
-        </section>
-        <section id="txt-index">
-            <h1>CONSTRUCTIONS BOIS ÉCOLOGIQUES</h1>
-            <p>ZT-Charpente réalise pour vous la consrtuction de charpente bois traditionnelles, de terrasses, extensions, cabanes, etc...<br>
-            <a href="html/contact.html">Contactez-nous</a> pour tous vos projets de construction bois. bla bla bla bla bla.<br> Visitez nos <a href="html/works.html">réalisations</a> ou apprenez en plus sur notre <a href="html/about.html">philosophie</a> de construction.</p>
+            <img src="img/zt-haches.jpg" alt="photo de haches et doloires">
+            <div class="text">
+                <h1>CONSTRUCTIONS BOIS ÉCOLOGIQUES</h1>
+                <p>ZT-Charpente réalise pour vous la consrtuction de charpente bois traditionnelles, de terrasses, extensions, cabanes, etc...<br>
+                <a href="html/contact.html">Contactez-nous</a> pour tous vos projets de construction bois. bla bla bla bla bla.<br> Visitez nos <a href="html/works.html">réalisations</a> ou apprenez en plus sur notre <a href="html/about.html">philosophie</a> de construction.</p>
+            </div>
         </section>
 
         <footer>
@@ -36,7 +36,7 @@
                 <a href="html/works.html">travaux</a> | 
                 <a href="html/contact.html">contact</a>
             </div>
-            <p class="copyright">&copy 2020 ZT-Charpente</p>
+            <p id="copyright">&copy 2020 ZT-Charpente</p>
         </footer>
 
     </body>
