add style and content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <body>
 
         <header>
-            <img id="logo" src="img/mobile-header-logo.svg" alt="logo zt-charpente">
+            <img id="logo-mobile" src="img/mobile-header-logo.svg" alt="logo zt-charpente">
+            <img id="logo-screen" src="img/header-logo.svg" alt="logo zt-charpente">
         </header>
 
         <nav>
