update layout, and add gallery layout

--- a/html/about.html
+++ b/html/about.html
@@ -13,7 +13,6 @@
 
         <header>
             <a href="../index.html">
-            <img id="logo-mobile" src="../img/mobile-header-logo.svg" alt="logo zt-charpente">
             <img id="logo-screen" src="../img/header-logo.svg" alt="logo zt-charpente">
             </a>
         </header>
@@ -24,13 +23,13 @@
             <a href="../html/contact.html">contact</a>
         </nav>
 
-        <section> 
-            <img src="../img/tom.jpg">
+        <section class="about"> 
+            <img src="../img/misc/zt-picage.jpg">
             <div class="text">
                 <h1>À propos de nous</h1>
-                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranuisetnrasuiteauierstauiesrtnrsrsauetnsiutetnsaiue a  airs anr au a ie rst ai esrt eanrsutie arnsutei rst anruste nrsuit rs<br> nasueinsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
-                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranuisetnrasuiteauierstauiesrtnrsrsauetnsiutetnsaiue a  airs anr au a ie rst ai esrt eanrsutie arnsutei rst anruste nrsuit rs<br> nasueinsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
-                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranuisetnrasuiteauierstauiesrtnrsrsauetnsiutetnsaiue a  airs anr au a ie rst ai esrt eanrsutie arnsutei rst anruste nrsuit rs<br> nasueinsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
+                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranuise tnrasui teauierstauie srtnrsrsa uetnsiu tetnsaiue a  airs anr au a ie rst ai esrt ean rsutie arnsutei rst anruste nrsuit rs<br> nasu einsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
+                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranuisetnra suiteauier stauiesrt nrsrsauet nsiutetnsaiue a  airs anr au a ie rst ai esrt eanrsutie arnsutei rst anruste nrsuit rs<br> nasueinsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
+                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranui setnrasuite auierstauies rtnrsrsaue tnsiute tnsaiue a  airs anr au a ie rst ai esrt eanrsutie arnsutei rst anruste nrsuit rs<br> nasueinsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
             </div>
         </section>
 
