--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,6 @@
 
         <header>
             <a href="../index.html">
-            <img id="logo-mobile" src="../img/mobile-header-logo.svg" alt="logo zt-charpente">
             <img id="logo-screen" src="../img/header-logo.svg" alt="logo zt-charpente">
             </a>
         </header>
@@ -24,12 +23,12 @@
             <a href="../html/contact.html">contact</a>
         </nav>
 
-        <section> 
+        <section class="contact"> 
             <div class="text">
                 <img id="logo-contact" src="../img/logo.svg" alt="logo zt-charpente">
                 <h1>Contactez-nous</h1>
-                <p>Zoé & Tom : <b>06</b> 72 42 87 73<br>
-                ztcharpente<b>@</b>gmail.com<br>
+                <p>Zoé & Tom : 06 72 42 87 73<br>
+                ztcharpente@gmail.com<br>
                 Le Bois Pataud 23350 Tercillat<br>
                 <a href="../index.html">ztcharpente.com</a>
             </div>
