--- a/html/works.html
+++ b/html/works.html
@@ -13,7 +13,6 @@
 
         <header>
             <a href="../index.html">
-            <img id="logo-mobile" src="../img/mobile-header-logo.svg" alt="logo zt-charpente">
             <img id="logo-screen" src="../img/header-logo.svg" alt="logo zt-charpente">
             </a>
         </header>
@@ -24,9 +23,7 @@
             <a href="../html/contact.html">contact</a>
         </nav>
 
-        <section> 
-            <div id="portfolio">
-            </div>
+        <section id="portfolio"> 
         </section>
 
         <footer>
@@ -38,6 +35,7 @@
             <p id="copyright">&copy 2020 ZT-Charpente</p>
         </footer>
 
+        <script type="text/javascript" src="../script/script.js"></script>
     </body>
 
 </html>
