--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <body>
 
         <header>
-            <img id="logo-mobile" src="img/mobile-header-logo.svg" alt="logo zt-charpente">
             <img id="logo-screen" src="img/header-logo.svg" alt="logo zt-charpente">
         </header>
 
@@ -22,8 +21,8 @@
             <a href="html/contact.html">contact</a>
         </nav>
 
-        <section>
-            <img src="img/zt-haches.jpg" alt="photo de haches et doloires">
+        <section class="index">
+            <img src="img/misc/zt-haches.jpg" alt="photo de haches et doloires">
             <div class="text">
                 <h1>CONSTRUCTIONS BOIS ÉCOLOGIQUES</h1>
                 <p>ZT-Charpente réalise pour vous la consrtuction de charpente bois traditionnelles, de terrasses, extensions, cabanes, etc...<br>
