change index img, update layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
 
         <section class="index">
-            <img src="img/misc/zt-haches.jpg" alt="photo de haches et doloires">
+            <img src="img/index.jpg" alt="Photo de Tom et Zoé">
             <div class="text">
                 <h1>CONSTRUCTIONS BOIS ÉCOLOGIQUES</h1>
                 <p>ZT-Charpente réalise pour vous la consrtuction de charpente bois traditionnelles, de terrasses, extensions, cabanes, etc...<br>
