update index txt and about txt

--- a/html/about.html
+++ b/html/about.html
@@ -27,9 +27,25 @@
             <img src="../img/misc/zt-picage.jpg">
             <div class="text">
                 <h1>À propos de nous</h1>
-                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranuise tnrasui teauierstauie srtnrsrsa uetnsiu tetnsaiue a  airs anr au a ie rst ai esrt ean rsutie arnsutei rst anruste nrsuit rs<br> nasu einsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
-                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranuisetnra suiteauier stauiesrt nrsrsauet nsiutetnsaiue a  airs anr au a ie rst ai esrt eanrsutie arnsutei rst anruste nrsuit rs<br> nasueinsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
-                <p>btnaiuest anuirstean usret rnsauit narusiet nrsauiet nrasuite nrsauite arnusite nrasutei ranui setnrasuite auierstauies rtnrsrsaue tnsiute tnsaiue a  airs anr au a ie rst ai esrt eanrsutie arnsutei rst anruste nrsuit rs<br> nasueinsrtrstaue narsite nst aunrset nrstauei auerist uaienrst aueirsn </p>
+                <p>
+                    Du bois à l’ouvrage !
+                </p>
+                <p>
+                    Au commencement était l’arbre, en forêt. Un matériaux renouvelable aux possibilités d’utilisations infinies.  Durant sa vie, grâce à la photosynthèse, l’arbre emmagasine du CO2 qu’il puise dans l’air. Utiliser son bois pour la construction c’est stocker durablement ce CO2 et ainsi limiter la pollution et les gazs à effet de serre.
+                </p>
+                <p>
+                    Ayant étudié la charpente et la résistance des matériaux, nous avons appris le travail du bois au gré de nos pérégrinations, sous ses formes les plus diverses et avec de nombreux passionnés. Après de multiples expériences professionnelles nous avons eu envie d’aller plus loin et de proposer une façon d’appréander le travail du bois en accord avec nos valeurs.
+                </p>
+                <p>
+                    Nous, c’est Zoé & Tom, installés en Creuse depuis 2015.
+                    <br>
+                    Ce que nous proposons, c’est des constructions à faible empreinte écologique, en utilisant du bois issu des ressources forestières locales, qui ne nécessite pas de traitement chimique.  Nous proposons un travail soigné avec une recherche d’esthétisme qui s’inscrit dans le contexte paysagers et naturel de chaque proposition.
+                </p>
+                <p>
+                    Maison écologique, extension, hangar, cabane insolite… notre palette d’intervention est large. 
+                    <br>
+                    Tout en proposant des maisons à ossatures bois pour répondre aux nouvelles demandes en matière de constructions écologique, nous essayons au maximum de diriger nos travaux vers la charpente traditionnelle qui permet de travailler avec du bois brut directement sortit des scieries locales, de minimiser les transports et de prendre plaisir à tailler des assemblages « à l’ancienne ». C’est pourquoi nous sommes continuellement en développement de nouvelles techniques inovantes permettant d’allier efficacité énergétique, confort et charpente traditionnelle.
+                </p>
             </div>
         </section>
 
