--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
         <section class="index">
             <img src="img/index.jpg" alt="Photo de Tom et Zoé">
             <div class="text">
-                <h1>CONSTRUCTIONS BOIS ÉCOLOGIQUES</h1>
-                <p>ZT-Charpente réalise pour vous la consrtuction de charpente bois traditionnelles, de terrasses, extensions, cabanes, etc...<br>
-                <a href="html/contact.html">Contactez-nous</a> pour tous vos projets de construction bois. bla bla bla bla bla.<br> Visitez nos <a href="html/works.html">réalisations</a> ou apprenez en plus sur notre <a href="html/about.html">philosophie</a> de construction.</p>
+                <h1>Charpente traditionnelle et ossature bois</h1>
+                <p>
+                Pour tous vos projets de <em>construction en bois</em>, de l’<em>ossature</em> à la <em>charpente</em> de la maison en passant par la <em>terrasse</em> et la <em>pergola</em>, ZT-Charpente conçoit et réalise vos envies !
+                </p>
+                <p>
+                Spécialisés dans la <em>charpente à assemblages traditionnels</em> (tenon et mortaise chevillé), nous utilisons des <em>essences de bois locales</em> (chêne, châtaigniers, douglas) qui ont poussé dans notre département de la Creuse et ses environs les plus proches.
+                </p>
+                <p>
+                Visitez quelques-unes de nos <a href="html/works.html">réalisations</a> et apprenez-en un peu plus sur <a href="html/about.html">notre entreprise</a>.
+                </p>
             </div>
         </section>
 
