add image gallery

--- a/html/works.html
+++ b/html/works.html
@@ -23,9 +23,38 @@
             <a href="../html/contact.html">contact</a>
         </nav>
 
-        <section id="portfolio"> 
+        <div id="works-section">
+            <div id="filter">
+                <p>Afficher :</p>
 
-        </section>
+                <div>
+                    <input type="radio" id="displayAll" name="filter" value="all" checked>
+                    <label for="displayAll">Tout</label>
+                </div>
+
+                <div>
+                    <input type="radio" id="displayCharpente" name="filter" value="charpente">
+                    <label for="displayCharpente">Charpente</label>
+                </div>
+
+
+                <div>
+                    <input type="radio" id="displayOssature" name="filter" value="ossature">
+                    <label for="displayOssature">Ossature</label>
+                </div>
+
+
+                <div>
+                    <input type="radio" id="displayCabane" name="filter" value="cabane">
+                    <label for="displayCabane">Cabane</label>
+                </div>
+
+            </div>
+
+            <section id="portfolio"> 
+
+            </section>
+        </div>
 
         <footer>
             <div id="footer-links">
