fix(typo): typos in text content

--- a/html/about.html
+++ b/html/about.html
@@ -39,12 +39,12 @@
                 <p>
                     Nous, c’est Zoé & Tom, installés en Creuse depuis 2015.
                     <br>
-                    Ce que nous proposons, c’est des constructions à faible empreinte écologique, en utilisant du bois issu des ressources forestières locales, qui ne nécessite pas de traitement chimique.  Nous proposons un travail soigné avec une recherche d’esthétisme qui s’inscrit dans le contexte paysagers et naturel de chaque proposition.
+                    Ce que nous proposons, c’est des constructions à faible empreinte écologique, en utilisant du bois issu des ressources forestières locales, qui ne nécessite pas de traitement chimique.  Nous proposons un travail soigné avec une recherche d’esthétisme qui s’inscrit dans le contexte paysager et naturel de chaque proposition.
                 </p>
                 <p>
                     Maison écologique, extension, hangar, cabane insolite… notre palette d’intervention est large. 
                     <br>
-                    Tout en proposant des maisons à ossatures bois pour répondre aux nouvelles demandes en matière de constructions écologique, nous essayons au maximum de diriger nos travaux vers la charpente traditionnelle qui permet de travailler avec du bois brut directement sortit des scieries locales, de minimiser les transports et de prendre plaisir à tailler des assemblages « à l’ancienne ». C’est pourquoi nous sommes continuellement en développement de nouvelles techniques inovantes permettant d’allier efficacité énergétique, confort et charpente traditionnelle.
+                    Tout en proposant des maisons à ossatures bois pour répondre aux nouvelles demandes en matière de constructions écologique, nous essayons au maximum de diriger nos travaux vers la charpente traditionnelle qui permet de travailler avec du bois brut directement sorti des scieries locales, de minimiser les transports et de prendre plaisir à tailler des assemblages « à l’ancienne ». C’est pourquoi nous sommes continuellement en développement de nouvelles techniques inovantes permettant d’allier efficacité énergétique, confort et charpente traditionnelle.
                 </p>
             </div>
         </section>
