--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Pour tous vos projets de <em>construction en bois</em>, de l’<em>ossature</em> à la <em>charpente</em> de la maison en passant par la <em>terrasse</em> et la <em>pergola</em>, ZT-Charpente conçoit et réalise vos envies !
                 </p>
                 <p>
-                Spécialisés dans la <em>charpente à assemblages traditionnels</em> (tenon et mortaise chevillé), nous utilisons des <em>essences de bois locales</em> (chêne, châtaigniers, douglas) qui ont poussé dans notre département de la Creuse et ses environs les plus proches.
+                Spécialisés dans la <em>charpente à assemblages traditionnels</em> (ex : tenon et mortaise chevillés), nous utilisons des <em>essences de bois locales</em> (chêne, châtaigniers, douglas) qui ont poussé dans notre département de la Creuse et ses environs les plus proches.
                 </p>
                 <p>
                 Visitez quelques-unes de nos <a href="html/works.html">réalisations</a> et apprenez-en un peu plus sur <a href="html/about.html">notre entreprise</a>.
