--- a/html/about.html
+++ b/html/about.html
@@ -31,10 +31,10 @@
                     Du bois à l’ouvrage !
                 </p>
                 <p>
-                    Au commencement était l’arbre, en forêt. Un matériaux renouvelable aux possibilités d’utilisations infinies.  Durant sa vie, grâce à la photosynthèse, l’arbre emmagasine du CO2 qu’il puise dans l’air. Utiliser son bois pour la construction c’est stocker durablement ce CO2 et ainsi limiter la pollution et les gazs à effet de serre.
+                    Au commencement était l’arbre, en forêt. Un matériau renouvelable aux possibilités d’utilisations infinies.  Durant sa vie, grâce à la photosynthèse, l’arbre emmagasine du CO2 qu’il puise dans l’air. Utiliser son bois pour la construction c’est stocker durablement ce CO2 et ainsi limiter la pollution et les gazs à effet de serre.
                 </p>
                 <p>
-                    Ayant étudié la charpente et la résistance des matériaux, nous avons appris le travail du bois au gré de nos pérégrinations, sous ses formes les plus diverses et avec de nombreux passionnés. Après de multiples expériences professionnelles nous avons eu envie d’aller plus loin et de proposer une façon d’appréander le travail du bois en accord avec nos valeurs.
+                    Ayant étudié la charpente et la résistance des matériaux, nous avons appris le travail du bois au gré de nos pérégrinations, sous ses formes les plus diverses et avec de nombreux passionnés. Après de multiples expériences professionnelles nous avons eu envie d’aller plus loin et de proposer une façon d’appréhender le travail du bois en accord avec nos valeurs.
                 </p>
                 <p>
                     Nous, c’est Zoé & Tom, installés en Creuse depuis 2015.
@@ -44,7 +44,7 @@
                 <p>
                     Maison écologique, extension, hangar, cabane insolite… notre palette d’intervention est large. 
                     <br>
-                    Tout en proposant des maisons à ossatures bois pour répondre aux nouvelles demandes en matière de constructions écologique, nous essayons au maximum de diriger nos travaux vers la charpente traditionnelle qui permet de travailler avec du bois brut directement sorti des scieries locales, de minimiser les transports et de prendre plaisir à tailler des assemblages « à l’ancienne ». C’est pourquoi nous sommes continuellement en développement de nouvelles techniques inovantes permettant d’allier efficacité énergétique, confort et charpente traditionnelle.
+                    Tout en proposant des maisons à ossatures bois pour répondre aux nouvelles demandes en matière de constructions écologiques, nous essayons au maximum de diriger nos travaux vers la charpente traditionnelle qui permet de travailler avec du bois brut directement sorti des scieries locales, de minimiser les transports et de prendre plaisir à tailler des assemblages « à l’ancienne ». C’est pourquoi nous sommes continuellement en développement de nouvelles techniques innovantes permettant d’allier efficacité énergétique, confort et charpente traditionnelle.
                 </p>
             </div>
         </section>
