fix: update pages titles to best practice

--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>ZT-CHARPENTE</title>
+        <title>À propos | ZT-Charpente</title>
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="../style/style.css">
     </head>
